[package]
name = "detect-targets"
description = "Detect the target of the env at runtime"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/detect-targets"
version = "0.1.11"
rust-version = "1.61.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
tokio = { version = "1.28.2", features = ["rt", "process", "sync"], default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"], default-features = false }
cfg-if = "1.0.0"
guess_host_triple = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_System_SystemInformation", "Win32_Foundation"] }
windows-dll = { version = "0.4.1", features = ["windows"], default-features = false }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"], default-features = false }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-binstall-{ target }.full.{ archive-format }"
