[package]
name = "detect-targets"
description = "Detect the target of the env at runtime"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/detect-targets"
version = "0.1.75"
rust-version = "1.62.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
tokio = { version = "1.47.0", features = [
    "rt",
    "process",
    "sync",
], default-features = false }
tracing = { version = "0.1.43", optional = true }
tracing-subscriber = { version = "0.3.22", features = [
    "fmt",
], default-features = false, optional = true }
cfg-if = "1.0.0"
guess_host_triple = "0.1.3"

[features]
tracing = ["dep:tracing"]
cli-logging = ["tracing", "dep:tracing-subscriber"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros"], default-features = false }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-binstall-{ target }.full.{ archive-format }"
