[package]
name = "detect-wasi"
description = "Detect if WASI can be run"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/detect-wasi"
version = "1.0.1"
rust-version = "1.61.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
tempfile = "3.5.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-binstall-{ target }.full.{ archive-format }"
