[package]
name = "flock"
description = "Locked files that can be used like normal File"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/flock"
version = "0.0.0"
rust-version = "1.61.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
fs4 = "0.6.2"
