[package]
name = "fs-lock"
description = "Locked files that can be used like normal File"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/fs-lock"
version = "0.1.0"
rust-version = "1.61.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
fs4 = "0.7.0"
