[package]
name = "fs-lock"
description = "Locked files that can be used like normal File"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/fs-lock"
version = "0.1.14"
rust-version = "1.89.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
tracing = { version = "0.1", optional = true }
cfg-if = "1"

[target.'cfg(any(target_os = "android"))'.dependencies]
fs4 = "0.13"
