[package]
name = "leon"
description = "Dead-simple string templating"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/leon"
version = "3.0.0"
rust-version = "1.61.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
exclude = ["fuzz", "benches"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"], optional = true }
miette = { version = "7.0.0", default-features = false, features = ["derive"], optional = true }
thiserror = "1.0.52"

[features]
default = ["miette"]
cli = ["dep:clap", "miette", "miette?/fancy-no-backtrace"]
miette = ["dep:miette"]
