[package]
name = "normalize-path"
description = "Like canonicalize, but without performing I/O"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/normalize-path"
version = "1.0.0"
rust-version = "1.61.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"