[package]
name = "simple-git"
version = "0.1.1"
edition = "2021"

description = "The simple git interface for gix suitable for async context (with tokio)"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/simple-git"
rust-version = "1.65.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
license = "Apache-2.0 OR MIT"

[dependencies]
compact_str = "0.7.0"
derive_destructure2 = "0.1"
thiserror = "1.0.40"
tokio = { version = "1.30.0", features = ["rt", "time"], default-features = false }
tracing = "0.1.37"

[dependencies.gix]
version = "0.54.1"
default-features = false
features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
]

[features]
rustls = [
    "gix/blocking-http-transport-reqwest-rust-tls",
]
native-tls = [
    "gix/blocking-http-transport-reqwest-native-tls",
]

git-max-perf = ["gix/max-performance"]
